--- a/demo-eureka-client/pom.xml
+++ b/demo-eureka-client/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>demoeureka</artifactId>
+	<artifactId>demoeurekaclient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo-eureka</name>
+	<name>demo-eureka-client</name>
 	<description>Demo project for Spring Boot</description>
 
 	<!-- lookup parent from repository -->
