--- a/demo-eureka-consumer/pom.xml
+++ b/demo-eureka-consumer/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>demoeureka</artifactId>
+	<artifactId>demoeurekaconsumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo-eureka</name>
+	<name>demo-eureka-consumer</name>
 	<description>Demo project for Spring Boot</description>
 
 	<!-- lookup parent from repository -->
@@ -66,6 +66,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 
 </project>
